[tool.poetry]
name = "clickhouse-connect"
version = "1.0.0"
description = ""
authors = ["Manuel Martín Morante <manu2001802@gmail.com>"]
readme = "README.md"
packages = [{include = "clickhouse_connect"}]

[tool.poetry.dependencies]
python = ">3.9,<3.13"
certifi = "^2023.11.17"
pytz = "^2023.3.post1"
zstandard = "^0.22.0"
lz4 = "^4.3.2"
sqlalchemy = ">1.3.21,<2.0"
numpy = "^1.26.2"
pandas = "^2.1.3"
arrow = "^1.3.0"
orjson = "^3.9.10"
urllib3 = "^2.1.0"

[tool.poetry.scripts]
start = "main:run"

[tool.poetry.group.dev.dependencies]
pytest="^5.2"

[build-system]
requires = ["poetry-core", "setuptools", "cython==3.0.5"]
build-backend = "poetry.core.masonry.api"
