[tool.poetry]
name = "clickhouse-connect"
version = "1.0.0"
description = ""
authors = ["Manuel Martín Morante <manu2001802@gmail.com>"]
readme = "README.md"
packages = [{include = "clickhouse_connect"}]

[tool.poetry.dependencies]
python = ">3.9,<3.13"
certifi = "^2023.11.17"
urllib3 = "^2.1.0"
pytz = "^2023.3.post1"
zstandard = "^0.22.0"
lz4 = "^4.3.2"
cython = "^3.0.5"

[tool.poetry.extras]
sqlalchemy = ["sqlalchemy"]
numpy = ["numpy"]
pandas = ["pandas"]
arrow = ["pyarrow"]
orjson = ["orjson"]

[tool.poetry.scripts]
start = "main:run"

[tool.poetry.group.dev.dependencies]
pytest="^5.2"

[tool.poetry.build]
script = "build.py"

[build-system]
requires = ["poetry-core", "setuptools", "cython"]
build-backend = "poetry.core.masonry.api"
